--- a/base/release.yaml
+++ b/base/release.yaml
@@ -22,3 +22,7 @@ spec:
   values:
     auth:
       existingSecret: postgresql-secret
+encryption:
+  enabled: true
+  inputPaths:
+    - base/secret.yaml
