update password value name to avoid conflicts

--- a/base/secret.yaml
+++ b/base/secret.yaml
@@ -5,4 +5,4 @@ metadata:
   namespace: {{index . "namespace"}}
 type: Opaque
 stringData:
-  postgres-password: {{index . "password"}}
+  postgres-password: {{index . "postgresPassword"}}
